Fix CSS so that it looks good on mobile

--- a/css/inog-website.webflow.css
+++ b/css/inog-website.webflow.css
@@ -6041,6 +6041,7 @@ blockquote {
 
   .insurance-paragraph {
     line-height: 1.4em;
+    margin-bottom: 20px;
   }
 
   .insurance-title {
